build: update deps

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@ant-design/colors": "~6.0.0",
     "@iconify/vue2": "~1.0.0",
     "@modyqyw/utils": "~0.7.0",
+    "@tailwindcss/typography": "~0.2.0",
     "@vue/composition-api": "~1.1.3",
     "@vueuse/core": "~6.0.0",
     "@vueuse/electron": "~6.0.0",
@@ -52,12 +53,14 @@
     "core-js": "~3.16.4",
     "dayjs": "~1.10.6",
     "element-ui": "~2.15.5",
+    "faker": "~5.5.3",
     "mitt": "~3.0.0",
     "mockjs": "~1.1.0",
     "nprogress": "~0.2.0",
     "portal-vue": "~2.1.7",
     "ress": "~4.0.0",
     "statuses": "~2.0.1",
+    "tailwindcss": "~1.9.6",
     "vue": "~2.6.14",
     "vue-auto-routing": "~1.0.1",
     "vue-i18n": "~8.25.0",
@@ -69,10 +72,14 @@
     "@babel/core": "~7.15.0",
     "@babel/eslint-parser": "~7.15.0",
     "@commitlint/cli": "~13.1.0",
+    "@fullhuman/postcss-purgecss": "~3.1.3",
+    "@fullhuman/vue-cli-plugin-purgecss": "~4.0.3",
     "@intlify/vue-i18n-loader": "~1.1.0",
-    "@modyqyw/fabric": "~3.2.1",
+    "@modyqyw/fabric": "~3.2.2",
     "@types/electron-devtools-installer": "~2.2.0",
+    "@types/faker": "~5.5.8",
     "@types/jest": "~27.0.1",
+    "@types/mockjs": "~1.0.4",
     "@types/node": "~16.7.6",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
@@ -87,11 +94,6 @@
     "@vue/runtime-dom": "~3.2.6",
     "@vue/test-utils": "~1.2.2",
     "@vuedx/typescript-plugin-vue": "~0.7.4",
-    "@windicss/plugin-animations": "~1.0.9",
-    "@windicss/plugin-heropatterns": "~0.0.8",
-    "@windicss/plugin-interaction-variants": "~1.0.0",
-    "@windicss/plugin-question-mark": "~0.1.1",
-    "@windicss/plugin-scrollbar": "~1.2.3",
     "commitizen": "~4.2.4",
     "compression-webpack-plugin": "~8.0.1",
     "electron": "13.2.3",
@@ -113,10 +115,8 @@
     "typescript": "~4.3.5",
     "vue-cli-plugin-auto-routing": "~1.3.0",
     "vue-cli-plugin-electron-builder": "~2.1.1",
-    "vue-cli-plugin-windicss": "~1.0.4",
     "vue-jest": "~3.0.7",
-    "vue-template-compiler": "~2.6.14",
-    "windicss": "~3.1.7"
+    "vue-template-compiler": "~2.6.14"
   },
   "config": {
     "commitizen": {
