--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "lint-staged": "~11.1.2",
     "markdownlint-cli": "~0.28.1",
     "npm-check-updates": "~11.8.3",
+    "postcss-preset-env": "~6.7.0",
     "prettier": "~2.3.2",
     "release-it": "~14.11.5",
     "sass": "~1.32.13",
