--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate-vue",
+  "name": "boilerplate-vue2",
   "version": "0.0.0",
   "private": true,
   "description": "A boilerplate for vue2",
