build: update deps

--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     "@ant-design/colors": "~6.0.0",
     "@iconify/vue2": "~1.0.0",
     "@modyqyw/utils": "~0.7.0",
+    "@sum.cumo/vue-browserupdate": "~3.0.1",
     "@tailwindcss/typography": "~0.2.0",
     "@vue/composition-api": "~1.1.4",
-    "@vueuse/core": "~6.2.1",
-    "@vueuse/electron": "~6.2.1",
+    "@vueuse/core": "~6.3.2",
+    "@vueuse/electron": "~6.3.2",
     "@vueuse/gesture": "~1.0.0",
-    "@vueuse/integrations": "~6.2.1",
+    "@vueuse/integrations": "~6.3.2",
     "@vueuse/motion": "~1.6.0",
     "axios": "~0.21.4",
     "axios-cache-adapter": "~2.7.3",
@@ -80,7 +81,7 @@
     "@types/faker": "~5.5.8",
     "@types/jest": "~27.0.1",
     "@types/mockjs": "~1.0.4",
-    "@types/node": "~16.7.11",
+    "@types/node": "~16.9.0",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
     "@typescript-eslint/eslint-plugin": "~4.31.0",
@@ -91,7 +92,7 @@
     "@vue/cli-plugin-unit-jest": "~5.0.0-beta.3",
     "@vue/cli-plugin-vuex": "~5.0.0-beta.3",
     "@vue/cli-service": "~5.0.0-beta.3",
-    "@vue/runtime-dom": "~3.2.9",
+    "@vue/runtime-dom": "~3.2.11",
     "@vue/test-utils": "~1.2.2",
     "@vuedx/typescript-plugin-vue": "~0.7.4",
     "commitizen": "~4.2.4",
