--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
     "electron:dev": "vue-cli-service electron:serve",
     "electron:staging-build": "vue-cli-service electron:build --report --mode staging -m -w -l",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'",
-    "lint": "yarn run lint:json && yarn run lint:markdown && yarn run lint:script && yarn run lint:style",
-    "lint:json": "prettier ./**/*.json --write --ignore-path=.gitignore",
-    "lint:markdown": "markdownlint . --fix --ignore-path=.gitignore",
-    "lint:script": "vue-cli-service lint --fix",
-    "lint:style": "stylelint ./**/*.{css,less,scss,vue} --fix --allow-empty-input --ignore-path=.gitignore",
+    "lint": "yarn run lint:eslint && yarn run lint:markdownlint && yarn run lint:stylelint",
+    "lint:eslint": "vue-cli-service lint --fix",
+    "lint:markdownlint": "markdownlint . --fix --ignore-path=.gitignore",
+    "lint:stylelint": "stylelint ./**/*.{css,less,scss,vue} --fix --allow-empty-input --ignore-path=.gitignore",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "prepare": "is-ci || husky install",
@@ -51,7 +50,7 @@
     "axios-logger": "~2.5.0",
     "axios-mock-adapter": "~1.20.0",
     "axios-retry": "~3.1.9",
-    "core-js": "~3.17.2",
+    "core-js": "~3.17.3",
     "dayjs": "~1.10.6",
     "element-ui": "~2.15.6",
     "faker": "~5.5.3",
@@ -76,7 +75,7 @@
     "@fullhuman/postcss-purgecss": "~3.1.3",
     "@fullhuman/vue-cli-plugin-purgecss": "~4.0.3",
     "@intlify/vue-i18n-loader": "~1.1.0",
-    "@modyqyw/fabric": "~3.3.2",
+    "@modyqyw/fabric": "~3.4.0",
     "@types/electron-devtools-installer": "~2.2.0",
     "@types/faker": "~5.5.8",
     "@types/jest": "~27.0.1",
