--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "lint:stylelint": "stylelint ./**/*.{css,less,scss,vue} --fix --allow-empty-input --ignore-path=.gitignore",
     "prepare": "is-ci || husky install",
     "release": "release-it",
-    "staging-build": "vue-cli-service build --mode staging --report",
-    "test:unit": "vue-cli-service test:unit --coverage --passWithNoTests"
+    "staging-build": "vue-cli-service build --mode staging --report"
   },
   "config": {
     "commitizen": {
@@ -66,7 +65,6 @@
     "@intlify/vue-i18n-loader": "~1.1.0",
     "@modyqyw/fabric": "~3.4.2",
     "@types/faker": "~5.5.8",
-    "@types/jest": "~27.0.1",
     "@types/mockjs": "~1.0.4",
     "@types/node": "~16.9.1",
     "@types/nprogress": "~0.2.0",
@@ -76,7 +74,6 @@
     "@vue/cli-plugin-babel": "~5.0.0-beta.3",
     "@vue/cli-plugin-eslint": "~5.0.0-beta.3",
     "@vue/cli-plugin-router": "~5.0.0-beta.3",
-    "@vue/cli-plugin-unit-jest": "~5.0.0-beta.3",
     "@vue/cli-plugin-vuex": "~5.0.0-beta.3",
     "@vue/cli-service": "~5.0.0-beta.3",
     "@vue/runtime-dom": "~3.2.11",
@@ -102,7 +99,6 @@
     "typescript": "~4.4.2",
     "unplugin-vue2-script-setup": "~0.6.1",
     "vue-cli-plugin-auto-routing": "~1.3.0",
-    "vue-jest": "~3.0.7",
     "vue-template-compiler": "~2.6.14"
   },
   "engines": {
