--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
+    "noUnusedLocals": true,
     "resolveJsonModule": true,
     "plugins": [{ "name": "@vuedx/typescript-plugin-vue" }],
     "moduleResolution": "node",
