--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   "dependencies": {
     "@ant-design/colors": "~6.0.0",
     "@iconify/vue2": "~1.0.0",
-    "@modyqyw/utils": "~0.7.0",
+    "@modyqyw/utils": "~1.0.0",
     "@sum.cumo/vue-browserupdate": "~3.0.1",
     "@tailwindcss/typography": "~0.2.0",
     "@vue/composition-api": "~1.1.5",
-    "@vueuse/core": "~6.3.2",
+    "@vueuse/core": "~6.3.3",
     "@vueuse/gesture": "~1.0.0",
-    "@vueuse/integrations": "~6.3.2",
+    "@vueuse/integrations": "~6.3.3",
     "@vueuse/motion": "~1.6.0",
     "axios": "~0.21.4",
     "axios-cache-adapter": "~2.7.3",
@@ -39,7 +39,7 @@
     "axios-mock-adapter": "~1.20.0",
     "axios-retry": "~3.1.9",
     "core-js": "~3.17.3",
-    "dayjs": "~1.10.6",
+    "dayjs": "~1.10.7",
     "element-ui": "~2.15.6",
     "faker": "~5.5.3",
     "mitt": "~3.0.0",
@@ -60,10 +60,11 @@
     "@babel/core": "~7.15.5",
     "@babel/eslint-parser": "~7.15.4",
     "@commitlint/cli": "~13.1.0",
-    "@fullhuman/postcss-purgecss": "~3.1.3",
+    "@fullhuman/postcss-purgecss": "~4.0.3",
     "@fullhuman/vue-cli-plugin-purgecss": "~4.0.3",
+    "@iconify/json": "~1.1.400",
     "@intlify/vue-i18n-loader": "~1.1.0",
-    "@modyqyw/fabric": "~3.4.2",
+    "@modyqyw/fabric": "~3.4.3",
     "@types/faker": "~5.5.8",
     "@types/mockjs": "~1.0.4",
     "@types/node": "~16.9.1",
@@ -74,13 +75,13 @@
     "@vue/cli-plugin-babel": "~5.0.0-beta.3",
     "@vue/cli-plugin-eslint": "~5.0.0-beta.3",
     "@vue/cli-plugin-router": "~5.0.0-beta.3",
+    "@vue/cli-plugin-typescript": "~5.0.0-beta.3",
     "@vue/cli-plugin-vuex": "~5.0.0-beta.3",
     "@vue/cli-service": "~5.0.0-beta.3",
     "@vue/runtime-dom": "~3.2.11",
     "@vue/test-utils": "~1.2.2",
-    "@vuedx/typescript-plugin-vue": "~0.7.4",
     "commitizen": "~4.2.4",
-    "compression-webpack-plugin": "~8.0.1",
+    "compression-webpack-plugin": "~9.0.0",
     "eslint": "~7.32.0",
     "husky": "~7.0.2",
     "is-ci": "~3.0.0",
@@ -96,7 +97,9 @@
     "sass-loader": "~12.1.0",
     "stylelint": "~13.13.1",
     "stylelint-webpack-plugin": "~3.0.1",
-    "typescript": "~4.4.2",
+    "typescript": "~4.4.3",
+    "unplugin-icons": "~0.8.1",
+    "unplugin-vue-components": "~0.15.0",
     "unplugin-vue2-script-setup": "~0.6.1",
     "vue-cli-plugin-auto-routing": "~1.3.0",
     "vue-template-compiler": "~2.6.14"
