--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "vue-cli-service serve --mode development",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'",
     "lint": "yarn run lint:eslint && yarn run lint:markdownlint && yarn run lint:stylelint",
-    "lint:eslint": "vue-cli-service lint --fix",
+    "lint:eslint": "vue-cli-service lint . --fix --ext=.js,.jsx,.ts,.tsx,.vue --ignore-path=.gitignore",
     "lint:markdownlint": "markdownlint . --fix --ignore-path=.gitignore",
     "lint:stylelint": "stylelint ./**/*.{css,less,scss,vue} --fix --allow-empty-input --ignore-path=.gitignore",
     "prepare": "is-ci || husky install",
