--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "A boilerplate for vue-cli and vue2.",
   "scripts": {
-    "build": "vue-cli-service build --mode production --report",
+    "build": "vue-tsc && vue-cli-service build --mode production --report",
     "check": "ncu",
     "commit": "cz",
     "dev": "vue-cli-service serve --mode development",
@@ -15,7 +15,7 @@
     "lint:stylelint": "stylelint ./**/*.{css,less,scss,vue} --fix --allow-empty-input --ignore-path=.gitignore",
     "prepare": "is-ci || husky install",
     "release": "release-it",
-    "staging-build": "vue-cli-service build --mode staging --report"
+    "staging-build": "vue-tsc && vue-cli-service build --mode staging --report"
   },
   "config": {
     "commitizen": {
@@ -25,7 +25,7 @@
   "dependencies": {
     "@ant-design/colors": "~6.0.0",
     "@iconify/vue2": "~1.0.0",
-    "@modyqyw/utils": "~1.0.0",
+    "@modyqyw/utils": "~1.0.2",
     "@sum.cumo/vue-browserupdate": "~3.0.1",
     "@tailwindcss/typography": "~0.2.0",
     "@vue/composition-api": "~1.1.5",
@@ -33,6 +33,7 @@
     "@vueuse/gesture": "~1.0.0",
     "@vueuse/integrations": "~6.3.3",
     "@vueuse/motion": "~1.6.0",
+    "@vueuse/sound": "~1.1.7",
     "axios": "~0.21.4",
     "axios-cache-adapter": "~2.7.3",
     "axios-logger": "~2.5.0",
@@ -93,6 +94,7 @@
     "postcss-preset-env": "~6.7.0",
     "prettier": "~2.2.1",
     "release-it": "~14.11.5",
+    "rimraf": "~3.0.2",
     "sass": "~1.32.13",
     "sass-loader": "~12.1.0",
     "stylelint": "~13.13.1",
@@ -102,7 +104,8 @@
     "unplugin-vue-components": "~0.15.0",
     "unplugin-vue2-script-setup": "~0.6.1",
     "vue-cli-plugin-auto-routing": "~1.3.0",
-    "vue-template-compiler": "~2.6.14"
+    "vue-template-compiler": "~2.6.14",
+    "vue-tsc": "~0.3.0"
   },
   "engines": {
     "node": "^12.22.6 || ^14.17.6 || ^16.6.2",
