--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "portal-vue": "~2.1.7",
     "ress": "~4.0.0",
     "statuses": "~2.0.1",
+    "swrv": "~0.9.4",
     "tailwindcss": "~1.9.6",
     "vue": "~2.6.14",
     "vue-auto-routing": "~1.0.1",
     "vue-i18n": "~8.25.0",
+    "vue-query": "~1.10.1",
     "vue-router": "~3.5.2",
     "vue-router-layout": "~0.1.5",
     "vuex": "~3.6.2"
