--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "dayjs": "~1.10.7",
     "element-ui": "~2.15.6",
     "faker": "~5.5.3",
+    "immer": "~9.0.6",
     "mitt": "~3.0.0",
     "mockjs": "~1.1.0",
     "nprogress": "~0.2.0",
