--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "@modyqyw/utils": "~1.0.3",
     "@sum.cumo/vue-browserupdate": "~3.0.1",
     "@vue/composition-api": "~1.2.2",
-    "@vueuse/core": "~6.4.1",
+    "@vueuse/core": "~6.5.3",
     "@vueuse/gesture": "~1.0.0",
-    "@vueuse/integrations": "~6.4.1",
+    "@vueuse/integrations": "~6.5.3",
     "@vueuse/motion": "~1.6.0",
     "@vueuse/sound": "~1.1.7",
     "axios": "~0.21.4",
@@ -38,7 +38,7 @@
     "axios-logger": "~2.5.0",
     "axios-mock-adapter": "~1.20.0",
     "axios-retry": "~3.1.9",
-    "core-js": "~3.18.0",
+    "core-js": "~3.18.1",
     "dayjs": "~1.10.7",
     "element-ui": "~2.15.6",
     "faker": "~5.5.3",
@@ -53,9 +53,10 @@
     "vue": "~2.6.14",
     "vue-auto-routing": "~1.0.1",
     "vue-i18n": "~8.26.1",
-    "vue-query": "~1.11.0",
+    "vue-query": "~1.11.1",
     "vue-router": "~3.5.2",
     "vue-router-layout": "~0.1.5",
+    "vue2-helpers": "~1.1.5",
     "vuex": "~3.6.2"
   },
   "devDependencies": {
@@ -64,12 +65,12 @@
     "@commitlint/cli": "~13.1.0",
     "@fullhuman/postcss-purgecss": "~4.0.3",
     "@fullhuman/vue-cli-plugin-purgecss": "~4.0.3",
-    "@iconify/json": "~1.1.405",
+    "@iconify/json": "~1.1.406",
     "@intlify/vue-i18n-loader": "~1.1.0",
     "@modyqyw/fabric": "~3.6.0",
     "@types/faker": "~5.5.8",
     "@types/mockjs": "~1.0.4",
-    "@types/node": "~16.9.6",
+    "@types/node": "~16.10.1",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
     "@typescript-eslint/eslint-plugin": "~4.31.2",
@@ -80,7 +81,7 @@
     "@vue/cli-plugin-typescript": "~5.0.0-beta.4",
     "@vue/cli-plugin-vuex": "~5.0.0-beta.4",
     "@vue/cli-service": "~5.0.0-beta.4",
-    "@vue/runtime-dom": "~3.2.16",
+    "@vue/runtime-dom": "~3.2.19",
     "@vue/test-utils": "~1.2.2",
     "commitizen": "~4.2.4",
     "compression-webpack-plugin": "~9.0.0",
@@ -101,8 +102,8 @@
     "stylelint": "~13.13.1",
     "stylelint-webpack-plugin": "~3.0.1",
     "typescript": "~4.4.3",
-    "unplugin-icons": "~0.11.3",
-    "unplugin-vue-components": "~0.15.3",
+    "unplugin-icons": "~0.11.4",
+    "unplugin-vue-components": "~0.15.4",
     "unplugin-vue2-script-setup": "~0.6.4",
     "vue-cli-plugin-auto-routing": "~1.3.0",
     "vue-template-compiler": "~2.6.14",
