--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "commit": "cz",
     "dev": "vue-cli-service serve --mode development",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'",
-    "lint": "yarn run lint:eslint && yarn run lint:markdownlint && yarn run lint:stylelint",
+    "lint": "pnpm run lint:eslint && pnpm run lint:markdownlint && pnpm run lint:stylelint",
     "lint:eslint": "vue-cli-service lint . --fix --ext=.js,.jsx,.ts,.tsx,.vue --ignore-path=.gitignore",
     "lint:markdownlint": "markdownlint . --fix --ignore-path=.gitignore",
     "lint:stylelint": "stylelint ./**/*.{css,less,scss,vue} --fix --allow-empty-input --ignore-path=.gitignore",
@@ -67,7 +67,7 @@
     "@fullhuman/vue-cli-plugin-purgecss": "~4.0.3",
     "@iconify/json": "~1.1.407",
     "@intlify/vue-i18n-loader": "~1.1.0",
-    "@modyqyw/fabric": "~3.6.0",
+    "@modyqyw/fabric": "~3.7.0",
     "@types/faker": "~5.5.8",
     "@types/mockjs": "~1.0.4",
     "@types/node": "~16.10.1",
