build: update deps

--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "immer": "~9.0.6",
     "mitt": "~3.0.0",
     "mockjs": "~1.1.0",
+    "modern-normalize": "~1.1.0",
     "nprogress": "~0.2.0",
     "portal-vue": "~2.1.7",
-    "ress": "~4.0.0",
     "statuses": "~2.0.1",
     "tailwindcss": "~1.9.6",
     "vue": "~2.6.14",
