--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "description": "A boilerplate for vue-cli and vue2.",
   "scripts": {
     "build": "vue-cli-service build --mode production --report",
-    "check": "ncu",
+    "build:staging": "vue-cli-service build --mode staging --report",
+    "check:deps": "ncu",
+    "check:types": "vue-tsc",
     "commit": "cz",
     "dev": "vue-cli-service serve --mode development",
-    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/i18n/locales/*.json'",
     "lint": "pnpm run lint:eslint && pnpm run lint:markdownlint && pnpm run lint:stylelint",
     "lint:eslint": "vue-cli-service lint . --fix --ext=.js,.jsx,.ts,.tsx,.vue --ignore-path=.gitignore",
     "lint:markdownlint": "markdownlint . --fix --ignore-path=.gitignore",
     "lint:stylelint": "stylelint ./**/*.{css,less,scss,vue} --fix --allow-empty-input --ignore-path=.gitignore",
     "prepare": "is-ci || husky install",
-    "release": "release-it",
-    "staging-build": "vue-tsc && vue-cli-service build --mode staging --report"
+    "release": "release-it"
   },
   "config": {
     "commitizen": {
@@ -27,18 +27,15 @@
     "@iconify/vue2": "~1.0.0",
     "@modyqyw/utils": "~1.0.4",
     "@sum.cumo/vue-browserupdate": "~3.0.1",
-    "@vue/composition-api": "~1.2.2",
+    "@vue/composition-api": "~1.2.4",
     "@vueuse/core": "~6.5.3",
-    "@vueuse/gesture": "~1.0.0",
     "@vueuse/integrations": "~6.5.3",
-    "@vueuse/motion": "~1.6.0",
-    "@vueuse/sound": "~1.1.7",
     "axios": "~0.22.0",
     "axios-cache-adapter": "~2.7.3",
     "axios-logger": "~2.5.0",
     "axios-mock-adapter": "~1.20.0",
     "axios-retry": "~3.2.0",
-    "core-js": "~3.18.1",
+    "core-js": "~3.18.2",
     "dayjs": "~1.10.7",
     "element-ui": "~2.15.6",
     "faker": "~5.5.3",
@@ -52,7 +49,6 @@
     "tailwindcss": "~1.9.6",
     "vue": "~2.6.14",
     "vue-auto-routing": "~1.0.1",
-    "vue-i18n": "~8.26.5",
     "vue-query": "~1.11.2",
     "vue-router": "~3.5.2",
     "vue-router-layout": "~0.1.5",
@@ -60,21 +56,20 @@
     "vuex": "~3.6.2"
   },
   "devDependencies": {
-    "@babel/core": "~7.15.5",
-    "@babel/eslint-parser": "~7.15.7",
+    "@babel/core": "~7.15.8",
+    "@babel/eslint-parser": "~7.15.8",
     "@commitlint/cli": "~13.2.0",
     "@fullhuman/postcss-purgecss": "~4.0.3",
     "@fullhuman/vue-cli-plugin-purgecss": "~4.0.3",
-    "@iconify/json": "~1.1.409",
-    "@intlify/vue-i18n-loader": "~1.1.0",
-    "@modyqyw/fabric": "~3.8.0",
+    "@iconify/json": "~1.1.411",
+    "@modyqyw/fabric": "~3.9.0",
     "@types/faker": "~5.5.8",
     "@types/mockjs": "~1.0.4",
-    "@types/node": "~16.10.2",
+    "@types/node": "~16.10.3",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
-    "@typescript-eslint/eslint-plugin": "~4.32.0",
-    "@typescript-eslint/parser": "~4.32.0",
+    "@typescript-eslint/eslint-plugin": "~4.33.0",
+    "@typescript-eslint/parser": "~4.33.0",
     "@vue/cli-plugin-babel": "~5.0.0-beta.4",
     "@vue/cli-plugin-eslint": "~5.0.0-beta.4",
     "@vue/cli-plugin-router": "~5.0.0-beta.4",
@@ -88,10 +83,8 @@
     "eslint": "~7.32.0",
     "husky": "~7.0.2",
     "is-ci": "~3.0.0",
-    "less": "~4.1.1",
-    "less-loader": "~10.0.1",
-    "lint-staged": "~11.1.2",
-    "markdownlint-cli": "~0.28.1",
+    "lint-staged": "~11.2.0",
+    "markdownlint-cli": "~0.29.0",
     "npm-check-updates": "~11.8.5",
     "postcss-preset-env": "~6.7.0",
     "prettier": "~2.2.1",
@@ -102,12 +95,12 @@
     "stylelint": "~13.13.1",
     "stylelint-webpack-plugin": "~3.0.1",
     "typescript": "~4.4.3",
-    "unplugin-icons": "~0.12.7",
+    "unplugin-icons": "~0.12.12",
     "unplugin-vue-components": "~0.15.6",
-    "unplugin-vue2-script-setup": "~0.6.4",
+    "unplugin-vue2-script-setup": "~0.6.7",
     "vue-cli-plugin-auto-routing": "~1.3.0",
     "vue-template-compiler": "~2.6.14",
-    "vue-tsc": "~0.3.0"
+    "vue-tsc": "~0.28.0"
   },
   "engines": {
     "node": "^12.22.6 || ^14.17.6 || ^16.8.0",
