--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "pnpm run lint:eslint && pnpm run lint:markdownlint && pnpm run lint:stylelint",
     "lint:eslint": "vue-cli-service lint . --fix --ext=.js,.jsx,.ts,.tsx,.vue --ignore-path=.gitignore",
     "lint:markdownlint": "markdownlint . --fix --ignore-path=.gitignore",
-    "lint:stylelint": "stylelint ./**/*.{css,less,scss,vue} --fix --allow-empty-input --ignore-path=.gitignore",
+    "lint:stylelint": "stylelint \"./**/*.{css,less,scss,vue}\" --fix --allow-empty-input --ignore-path=.gitignore",
     "prepare": "is-ci || husky install",
     "release": "release-it"
   },
@@ -25,17 +25,17 @@
   "dependencies": {
     "@ant-design/colors": "~6.0.0",
     "@iconify/vue2": "~1.0.0",
-    "@modyqyw/utils": "~1.0.4",
+    "@modyqyw/utils": "~1.1.0",
     "@sum.cumo/vue-browserupdate": "~3.0.1",
     "@vue/composition-api": "~1.2.4",
-    "@vueuse/core": "~6.5.3",
-    "@vueuse/integrations": "~6.5.3",
-    "axios": "~0.23.0",
+    "@vueuse/core": "~6.7.4",
+    "@vueuse/integrations": "~6.7.4",
+    "axios": "~0.24.0",
     "axios-cache-adapter": "~2.7.3",
     "axios-logger": "~2.5.0",
     "axios-mock-adapter": "~1.20.0",
-    "axios-retry": "~3.2.0",
-    "core-js": "~3.18.3",
+    "axios-retry": "~3.2.4",
+    "core-js": "~3.19.0",
     "dayjs": "~1.10.7",
     "element-ui": "~2.15.6",
     "faker": "~5.5.3",
@@ -49,8 +49,8 @@
     "tailwindcss": "~1.9.6",
     "vue": "~2.6.14",
     "vue-auto-routing": "~1.0.1",
-    "vue-query": "~1.11.2",
-    "vue-router": "~3.5.2",
+    "vue-query": "~1.11.3",
+    "vue-router": "~3.5.3",
     "vue-router-layout": "~0.1.5",
     "vue2-helpers": "~1.1.5",
     "vuex": "~3.6.2"
@@ -59,15 +59,15 @@
     "@babel/core": "~7.15.8",
     "@babel/eslint-parser": "~7.15.8",
     "@commitlint/cli": "~13.2.1",
-    "@iconify/json": "~1.1.414",
-    "@modyqyw/fabric": "~3.9.0",
-    "@types/faker": "~5.5.8",
+    "@iconify/json": "~1.1.420",
+    "@modyqyw/fabric": "~4.0.0-10",
+    "@types/faker": "~5.5.9",
     "@types/mockjs": "~1.0.4",
-    "@types/node": "~16.10.9",
+    "@types/node": "~16.11.6",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
-    "@typescript-eslint/eslint-plugin": "~5.0.0",
-    "@typescript-eslint/parser": "~5.0.0",
+    "@typescript-eslint/eslint-plugin": "~5.2.0",
+    "@typescript-eslint/parser": "~5.2.0",
     "@vue/cli-plugin-babel": "~5.0.0-beta.5",
     "@vue/cli-plugin-eslint": "~5.0.0-beta.5",
     "@vue/cli-plugin-router": "~5.0.0-beta.5",
@@ -79,9 +79,9 @@
     "commitizen": "~4.2.4",
     "compression-webpack-plugin": "~9.0.0",
     "eslint": "~7.32.0",
-    "husky": "~7.0.2",
-    "is-ci": "~3.0.0",
-    "lint-staged": "~11.2.3",
+    "husky": "~7.0.4",
+    "is-ci": "~3.0.1",
+    "lint-staged": "~11.2.6",
     "markdownlint-cli": "~0.29.0",
     "npm-check-updates": "~11.8.5",
     "postcss-preset-env": "~6.7.0",
@@ -89,16 +89,16 @@
     "release-it": "~14.11.6",
     "rimraf": "~3.0.2",
     "sass": "~1.32.13",
-    "sass-loader": "~12.2.0",
-    "stylelint": "~13.13.1",
+    "sass-loader": "~12.3.0",
+    "stylelint": "~14.0.1",
     "stylelint-webpack-plugin": "~3.0.1",
     "typescript": "~4.4.4",
-    "unplugin-icons": "~0.12.15",
-    "unplugin-vue-components": "~0.15.6",
-    "unplugin-vue2-script-setup": "~0.6.11",
+    "unplugin-icons": "~0.12.17",
+    "unplugin-vue-components": "~0.16.0",
+    "unplugin-vue2-script-setup": "~0.6.12",
     "vue-cli-plugin-auto-routing": "~1.3.0",
     "vue-template-compiler": "~2.6.14",
-    "vue-tsc": "~0.28.3"
+    "vue-tsc": "~0.28.10"
   },
   "engines": {
     "node": "^12.22.6 || ^14.17.6 || ^16.8.0",
