--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
   "dependencies": {
     "@ant-design/colors": "~6.0.0",
     "@iconify/vue2": "~1.0.0",
-    "@modyqyw/utils": "~1.1.0",
+    "@modyqyw/utils": "~2.0.0",
     "@sum.cumo/vue-browserupdate": "~3.0.1",
-    "@vue/composition-api": "~1.3.0",
-    "@vueuse/core": "~6.7.4",
-    "@vueuse/integrations": "~6.7.4",
+    "@vue/composition-api": "~1.3.3",
+    "@vueuse/core": "~6.8.0",
+    "@vueuse/integrations": "~6.8.0",
     "axios": "~0.24.0",
     "axios-cache-adapter": "~2.7.3",
-    "axios-logger": "~2.5.0",
+    "axios-logger": "~2.6.0",
     "axios-mock-adapter": "~1.20.0",
     "axios-retry": "~3.2.4",
-    "core-js": "~3.19.0",
+    "core-js": "~3.19.1",
     "dayjs": "~1.10.7",
     "element-ui": "~2.15.6",
     "faker": "~5.5.3",
@@ -49,7 +49,7 @@
     "tailwindcss": "~1.9.6",
     "vue": "~2.6.14",
     "vue-auto-routing": "~1.0.1",
-    "vue-query": "~1.11.3",
+    "vue-query": "~1.13.0",
     "vue-router": "~3.5.3",
     "vue-router-layout": "~0.1.5",
     "vue2-helpers": "~1.1.5",
@@ -58,23 +58,23 @@
   "devDependencies": {
     "@babel/core": "~7.16.0",
     "@babel/eslint-parser": "~7.16.0",
-    "@commitlint/cli": "~13.2.1",
-    "@iconify/json": "~1.1.421",
-    "@modyqyw/fabric": "~4.0.0-11",
+    "@commitlint/cli": "~14.1.0",
+    "@iconify/json": "~1.1.425",
+    "@modyqyw/fabric": "~4.0.0-15",
     "@types/faker": "~5.5.9",
     "@types/mockjs": "~1.0.4",
     "@types/node": "~16.11.6",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
-    "@typescript-eslint/eslint-plugin": "~5.2.0",
-    "@typescript-eslint/parser": "~5.2.0",
-    "@vue/cli-plugin-babel": "~5.0.0-beta.5",
-    "@vue/cli-plugin-eslint": "~5.0.0-beta.5",
-    "@vue/cli-plugin-router": "~5.0.0-beta.5",
-    "@vue/cli-plugin-typescript": "~5.0.0-beta.5",
-    "@vue/cli-plugin-vuex": "~5.0.0-beta.5",
-    "@vue/cli-service": "~5.0.0-beta.5",
-    "@vue/runtime-dom": "~3.2.20",
+    "@typescript-eslint/eslint-plugin": "~5.3.0",
+    "@typescript-eslint/parser": "~5.3.0",
+    "@vue/cli-plugin-babel": "~5.0.0-rc.0",
+    "@vue/cli-plugin-eslint": "~5.0.0-rc.0",
+    "@vue/cli-plugin-router": "~5.0.0-rc.0",
+    "@vue/cli-plugin-typescript": "~5.0.0-rc.0",
+    "@vue/cli-plugin-vuex": "~5.0.0-rc.0",
+    "@vue/cli-service": "~5.0.0-rc.0",
+    "@vue/runtime-dom": "~3.2.21",
     "@vue/test-utils": "~1.2.2",
     "commitizen": "~4.2.4",
     "compression-webpack-plugin": "~9.0.0",
@@ -83,7 +83,7 @@
     "is-ci": "~3.0.1",
     "lint-staged": "~11.2.6",
     "markdownlint-cli": "~0.29.0",
-    "npm-check-updates": "~11.8.5",
+    "npm-check-updates": "~12.0.0",
     "postcss-preset-env": "~6.7.0",
     "prettier": "~2.2.1",
     "release-it": "~14.11.6",
@@ -91,13 +91,13 @@
     "sass": "~1.32.13",
     "sass-loader": "~12.3.0",
     "stylelint": "~14.0.1",
-    "stylelint-webpack-plugin": "~3.0.1",
+    "stylelint-webpack-plugin": "~3.1.0",
     "typescript": "~4.4.4",
-    "unplugin-icons": "~0.12.17",
-    "unplugin-vue-components": "~0.17.0",
-    "unplugin-vue2-script-setup": "~0.6.12",
+    "unplugin-icons": "~0.12.18",
+    "unplugin-vue-components": "~0.17.2",
+    "unplugin-vue2-script-setup": "~0.6.13",
     "vue-cli-plugin-auto-routing": "~1.3.0",
     "vue-template-compiler": "~2.6.14",
-    "vue-tsc": "~0.28.10"
+    "vue-tsc": "~0.29.0"
   }
 }
