--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "lib": ["esnext", "dom", "scripthost"]
+    "lib": ["esnext", "dom"]
   },
   "vueCompilerOptions": {
     "experimentalCompatMode": 2,
@@ -46,12 +46,5 @@
     "./**/*.tsx",
     "./**/*.vue"
   ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "dist-ssr",
-    "dist_electron",
-    "out",
-    "unpackage"
-  ]
+  "exclude": ["node_modules", "dist", "dist-ssr", "dist_electron", "out", "unpackage"]
 }
