--- a/package.json
+++ b/package.json
@@ -2,20 +2,22 @@
   "name": "boilerplate-vue2",
   "version": "0.0.0",
   "private": true,
-  "description": "A boilerplate for vue-cli and vue2.",
+  "description": "A boilerplate for vue2.",
   "scripts": {
-    "build": "vue-cli-service build --mode production --report",
-    "build:staging": "vue-cli-service build --mode staging --report",
+    "build": "vite build",
     "check:deps": "ncu",
     "check:types": "vue-tsc",
+    "clean": "rimraf ./node_modules/.vite && rimraf ./dist",
     "commit": "cz",
-    "dev": "vue-cli-service serve --mode development",
+    "dev": "vite",
+    "postinstall": "pnpm run clean",
     "lint": "pnpm run lint:eslint && pnpm run lint:markdownlint && pnpm run lint:stylelint",
-    "lint:eslint": "vue-cli-service lint . --fix --ext=.js,.jsx,.ts,.tsx,.vue --ignore-path=.gitignore",
+    "lint:eslint": "eslint . --fix --ext=.js,.jsx,.ts,.tsx,.vue --ignore-path=.gitignore",
     "lint:markdownlint": "markdownlint . --fix --ignore-path=.gitignore",
-    "lint:stylelint": "stylelint \"./**/*.{css,less,scss,vue}\" --fix --allow-empty-input --ignore-path=.gitignore",
+    "lint:stylelint": "stylelint \"./**/*.{css,less,scss,sass,vue}\" --fix --allow-empty-input --ignore-path=.gitignore",
     "prepare": "is-ci || husky install",
-    "release": "release-it"
+    "release": "release-it && pnpm run build",
+    "serve": "vite preview -- port 5050"
   },
   "config": {
     "commitizen": {
@@ -27,30 +29,21 @@
     "@iconify/vue2": "~1.1.1",
     "@modyqyw/utils": "~2.0.1",
     "@sum.cumo/vue-browserupdate": "~3.0.1",
-    "@vue/composition-api": "~1.4.0",
-    "@vueuse/core": "~6.9.1",
-    "@vueuse/integrations": "~6.9.1",
+    "@vue/composition-api": "~1.4.1",
+    "@vueuse/core": "~7.1.2",
+    "@vueuse/integrations": "~7.1.2",
     "axios": "~0.24.0",
-    "axios-cache-adapter": "~2.7.3",
-    "axios-logger": "~2.6.0",
-    "axios-mock-adapter": "~1.20.0",
-    "axios-retry": "~3.2.4",
-    "core-js": "~3.19.1",
     "dayjs": "~1.10.7",
     "element-ui": "~2.15.7",
-    "faker": "~5.5.3",
-    "mitt": "~3.0.0",
-    "mockjs": "~1.1.0",
     "modern-normalize": "~1.1.0",
     "nprogress": "~0.2.0",
-    "portal-vue": "~2.1.7",
+    "pinia": "~2.0.6",
+    "query-string": "~7.0.1",
     "statuses": "~2.0.1",
     "tailwindcss": "~1.9.6",
     "vue": "~2.6.14",
-    "vue-auto-routing": "~1.0.1",
     "vue-query": "~1.14.0",
     "vue-router": "~3.5.3",
-    "vue-router-layout": "~0.1.5",
     "vue2-helpers": "~1.1.6",
     "vuex": "~3.6.2"
   },
@@ -59,43 +52,43 @@
     "@babel/eslint-parser": "~7.16.3",
     "@commitlint/cli": "~15.0.0",
     "@iconify/json": "~1.1.430",
-    "@modyqyw/fabric": "~4.0.0-18",
-    "@types/faker": "~5.5.9",
-    "@types/mockjs": "~1.0.4",
-    "@types/node": "~16.11.7",
+    "@modyqyw/fabric": "~4.2.1",
+    "@types/node": "~16.11.11",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
-    "@typescript-eslint/eslint-plugin": "~5.4.0",
-    "@typescript-eslint/parser": "~5.4.0",
-    "@vue/cli-plugin-babel": "~5.0.0-rc.1",
-    "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
-    "@vue/cli-plugin-router": "~5.0.0-rc.1",
-    "@vue/cli-plugin-typescript": "~5.0.0-rc.1",
-    "@vue/cli-plugin-vuex": "~5.0.0-rc.1",
-    "@vue/cli-service": "~5.0.0-rc.1",
+    "@typescript-eslint/eslint-plugin": "~5.5.0",
+    "@typescript-eslint/parser": "~5.5.0",
+    "@vitejs/plugin-legacy": "~1.6.3",
     "@vue/runtime-dom": "~3.2.22",
-    "@vue/test-utils": "~1.3.0",
     "commitizen": "~4.2.4",
-    "compression-webpack-plugin": "~9.0.1",
-    "eslint": "~8.2.0",
+    "cross-env": "~7.0.3",
+    "eslint": "~8.4.0",
     "husky": "~7.0.4",
     "is-ci": "~3.0.1",
-    "lint-staged": "~12.0.2",
-    "markdownlint-cli": "~0.29.0",
+    "lint-staged": "~12.1.2",
+    "markdownlint-cli": "~0.30.0",
     "npm-check-updates": "~12.0.2",
-    "postcss-preset-env": "~7.0.0",
-    "prettier": "~2.2.1",
-    "release-it": "~14.11.7",
+    "picocolors": "~1.0.0",
+    "postcss-preset-env": "~7.0.1",
+    "prettier": "~2.5.0",
+    "release-it": "~14.11.8",
     "rimraf": "~3.0.2",
-    "sass": "~1.43.4",
-    "sass-loader": "~12.3.0",
+    "sass": "~1.44.0",
+    "shelljs": "~0.8.4",
     "stylelint": "~14.1.0",
-    "stylelint-webpack-plugin": "~3.1.0",
     "typescript": "~4.5.2",
-    "unplugin-icons": "~0.12.18",
+    "unplugin-icons": "~0.12.22",
     "unplugin-vue-components": "~0.17.2",
-    "unplugin-vue2-script-setup": "~0.6.16",
-    "vue-cli-plugin-auto-routing": "~1.3.0",
+    "unplugin-vue2-script-setup": "~0.7.3",
+    "vite": "~2.6.14",
+    "vite-plugin-compression": "~0.3.6",
+    "vite-plugin-env-compatible": "~1.1.1",
+    "vite-plugin-eslint": "~1.3.0",
+    "vite-plugin-mkcert": "~1.5.2",
+    "vite-plugin-pages": "~0.18.2",
+    "vite-plugin-stylelint": "~1.0.4",
+    "vite-plugin-vue-layouts": "~0.5.0",
+    "vite-plugin-vue2": "~1.9.0",
     "vue-template-compiler": "~2.6.14",
     "vue-tsc": "~0.29.5"
   }
