--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     "vue": "~2.6.14",
     "vue-query": "~1.14.0",
     "vue-router": "~3.5.3",
-    "vue2-helpers": "~1.1.6",
-    "vuex": "~3.6.2"
+    "vue2-helpers": "~1.1.6"
   },
   "devDependencies": {
     "@babel/core": "~7.16.0",
