--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "@iconify/vue2": "~1.1.1",
     "@modyqyw/utils": "~2.0.1",
     "@sum.cumo/vue-browserupdate": "~3.0.1",
-    "@vue/composition-api": "~1.4.1",
-    "@vueuse/core": "~7.3.0",
-    "@vueuse/integrations": "~7.3.0",
+    "@vue/composition-api": "~1.4.2",
+    "@vueuse/core": "~7.4.0",
+    "@vueuse/integrations": "~7.4.0",
     "axios": "~0.24.0",
     "dayjs": "~1.10.7",
     "element-ui": "~2.15.7",
@@ -50,9 +50,9 @@
     "@babel/core": "~7.16.5",
     "@babel/eslint-parser": "~7.16.5",
     "@commitlint/cli": "~15.0.0",
-    "@iconify/json": "~1.1.443",
+    "@iconify/json": "~1.1.444",
     "@modyqyw/fabric": "~4.3.0",
-    "@types/node": "~17.0.0",
+    "@types/node": "latest",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
     "@typescript-eslint/eslint-plugin": "~5.7.0",
@@ -61,10 +61,10 @@
     "@vue/runtime-dom": "~3.2.26",
     "commitizen": "~4.2.4",
     "cross-env": "~7.0.3",
-    "eslint": "~8.4.1",
+    "eslint": "~8.5.0",
     "husky": "~7.0.4",
     "is-ci": "~3.0.1",
-    "lint-staged": "~12.1.2",
+    "lint-staged": "~12.1.3",
     "markdownlint-cli": "~0.30.0",
     "npm-check-updates": "~12.0.5",
     "picocolors": "~1.0.0",
@@ -84,7 +84,7 @@
     "vite-plugin-env-compatible": "~1.1.1",
     "vite-plugin-eslint": "~1.3.0",
     "vite-plugin-mkcert": "~1.5.2",
-    "vite-plugin-pages": "~0.19.4",
+    "vite-plugin-pages": "~0.19.5",
     "vite-plugin-stylelint": "~1.1.0",
     "vite-plugin-vue-layouts": "~0.5.0",
     "vite-plugin-vue2": "~1.9.0",
