--- a/package.json
+++ b/package.json
@@ -8,50 +8,50 @@
     "check:deps": "ncu",
     "check:types": "vue-tsc",
     "clean": "rimraf ./node_modules/.vite && rimraf ./dist",
-    "commit": "cz",
+    "commit": "git-cz",
     "dev": "vite",
     "postinstall": "pnpm run clean",
     "lint": "pnpm run lint:eslint && pnpm run lint:markdownlint && pnpm run lint:stylelint",
-    "lint:eslint": "eslint . --fix --ext=.js,.jsx,.ts,.tsx,.vue --ignore-path=.gitignore",
+    "lint:eslint": "eslint . --fix --ext=.js,.jsx,.ts,.tsx,.vue,.svelte --ignore-path=.gitignore",
     "lint:markdownlint": "markdownlint . --fix --ignore-path=.gitignore",
-    "lint:stylelint": "stylelint \"./**/*.{css,less,scss,sass,vue}\" --fix --allow-empty-input --ignore-path=.gitignore",
+    "lint:stylelint": "stylelint \"./**/*.{css,less,scss,sass,vue,svelte}\" --fix --allow-empty-input --ignore-path=.gitignore",
     "prepare": "is-ci || husky install",
     "release": "release-it && pnpm run build",
     "serve": "vite preview -- port 5050"
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "./node_modules/@commitlint/cz-commitlint"
     }
   },
   "dependencies": {
     "@ant-design/colors": "~6.0.0",
     "@iconify/vue2": "~1.1.1",
-    "@modyqyw/utils": "~2.0.1",
+    "@modyqyw/utils": "~2.1.1",
     "@sum.cumo/vue-browserupdate": "~3.0.1",
     "@vue/composition-api": "~1.4.2",
-    "@vueuse/core": "~7.4.0",
-    "@vueuse/integrations": "~7.4.0",
+    "@vueuse/core": "~7.4.1",
+    "@vueuse/integrations": "~7.4.1",
     "axios": "~0.24.0",
     "dayjs": "~1.10.7",
     "element-ui": "~2.15.7",
     "modern-normalize": "~1.1.0",
     "nprogress": "~0.2.0",
-    "pinia": "~2.0.8",
+    "pinia": "~2.0.9",
     "query-string": "~7.0.1",
     "statuses": "~2.0.1",
     "tailwindcss": "~1.9.6",
     "vue": "~2.6.14",
-    "vue-query": "~1.14.0",
+    "vue-query": "~1.15.0",
     "vue-router": "~3.5.3",
     "vue2-helpers": "~1.1.6"
   },
   "devDependencies": {
     "@babel/core": "~7.16.5",
     "@babel/eslint-parser": "~7.16.5",
-    "@commitlint/cli": "~15.0.0",
-    "@iconify/json": "~1.1.445",
-    "@modyqyw/fabric": "~4.4.5",
+    "@commitlint/cli": "~16.0.0",
+    "@iconify/json": "~1.1.447",
+    "@modyqyw/fabric": "~4.6.1",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
     "@typescript-eslint/eslint-plugin": "~5.8.0",
@@ -63,31 +63,32 @@
     "eslint": "~8.5.0",
     "husky": "~7.0.4",
     "is-ci": "~3.0.1",
-    "lint-staged": "~12.1.3",
+    "lint-staged": "~12.1.4",
     "markdownlint-cli": "~0.30.0",
     "npm-check-updates": "~12.0.5",
     "picocolors": "~1.0.0",
-    "postcss-preset-env": "~7.0.2",
+    "postcss-preset-env": "~7.1.0",
     "prettier": "~2.5.1",
     "release-it": "~14.11.8",
     "rimraf": "~3.0.2",
     "sass": "~1.45.1",
     "shelljs": "~0.8.4",
     "stylelint": "~14.2.0",
+    "type-fest": "~2.8.0",
     "typescript": "~4.5.4",
-    "unplugin-icons": "~0.12.23",
-    "unplugin-vue-components": "~0.17.9",
+    "unplugin-icons": "~0.13.0",
+    "unplugin-vue-components": "~0.17.11",
     "unplugin-vue2-script-setup": "~0.8.3",
-    "vite": "~2.7.5",
+    "vite": "~2.7.7",
     "vite-plugin-compression": "~0.3.6",
     "vite-plugin-env-compatible": "~1.1.1",
     "vite-plugin-eslint": "~1.3.0",
     "vite-plugin-mkcert": "~1.5.2",
-    "vite-plugin-pages": "~0.19.6",
+    "vite-plugin-pages": "~0.19.7",
     "vite-plugin-stylelint": "~1.1.0",
     "vite-plugin-vue-layouts": "~0.5.0",
     "vite-plugin-vue2": "~1.9.0",
     "vue-template-compiler": "~2.6.14",
-    "vue-tsc": "~0.30.0"
+    "vue-tsc": "~0.30.1"
   }
 }
