chore: update config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,12 @@
     ],
     "target": "ESNext"
   },
+  "vueCompilerOptions": {
+    "experimentalCompatMode": 2,
+    "experimentalTemplateCompilerOptions": {
+      "compatConfig": { "MODE": 2 }
+    }
+  },
   "include": [
     "./**/.*.js",
     "./**/*.js",
