--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "vite",
     "postinstall": "pnpm run clean",
     "lint": "pnpm run lint:eslint && pnpm run lint:markdownlint && pnpm run lint:stylelint",
-    "lint:eslint": "eslint . --fix --ext=.js,.jsx,.ts,.tsx,.vue,.svelte --ignore-path=.gitignore",
+    "lint:eslint": "eslint . --fix --ext=.js,.cjs,.mjs,.jsx,.ts,.cts,.mts,.tsx,.vue,.svelte --ignore-path=.gitignore",
     "lint:markdownlint": "markdownlint . --fix --ignore-path=.gitignore",
     "lint:stylelint": "stylelint \"./**/*.{css,less,scss,sass,vue,svelte}\" --fix --allow-empty-input --ignore-path=.gitignore",
     "prepare": "is-ci || husky install",
@@ -28,11 +28,11 @@
     "@ant-design/colors": "~6.0.0",
     "@iconify/vue2": "~1.1.1",
     "@modyqyw/utils": "~2.1.1",
-    "@sum.cumo/vue-browserupdate": "~3.0.1",
-    "@vue/composition-api": "~1.4.2",
-    "@vueuse/core": "~7.4.1",
-    "@vueuse/integrations": "~7.4.1",
+    "@vue/composition-api": "~1.4.3",
+    "@vueuse/core": "~7.5.1",
+    "@vueuse/integrations": "~7.5.1",
     "axios": "~0.24.0",
+    "browser-update": "~3.3.37",
     "dayjs": "~1.10.7",
     "element-ui": "~2.15.7",
     "modern-normalize": "~1.1.0",
@@ -47,15 +47,16 @@
     "vue2-helpers": "~1.1.6"
   },
   "devDependencies": {
-    "@babel/core": "~7.16.5",
+    "@babel/core": "~7.16.7",
     "@babel/eslint-parser": "~7.16.5",
-    "@commitlint/cli": "~16.0.0",
-    "@iconify/json": "~1.1.447",
-    "@modyqyw/fabric": "~4.6.1",
+    "@commitlint/cli": "~16.0.1",
+    "@iconify/json": "~1.1.449",
+    "@modyqyw/fabric": "~4.7.1",
+    "@types/browser-update": "~3.3.0",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
-    "@typescript-eslint/eslint-plugin": "~5.8.0",
-    "@typescript-eslint/parser": "~5.8.0",
+    "@typescript-eslint/eslint-plugin": "~5.8.1",
+    "@typescript-eslint/parser": "~5.8.1",
     "@vitejs/plugin-legacy": "~1.6.4",
     "@vue/runtime-dom": "~3.2.26",
     "commitizen": "~4.2.4",
@@ -71,7 +72,7 @@
     "prettier": "~2.5.1",
     "release-it": "~14.11.8",
     "rimraf": "~3.0.2",
-    "sass": "~1.45.1",
+    "sass": "~1.45.2",
     "shelljs": "~0.8.4",
     "stylelint": "~14.2.0",
     "type-fest": "~2.8.0",
@@ -79,12 +80,12 @@
     "unplugin-icons": "~0.13.0",
     "unplugin-vue-components": "~0.17.11",
     "unplugin-vue2-script-setup": "~0.8.3",
-    "vite": "~2.7.7",
-    "vite-plugin-compression": "~0.3.6",
+    "vite": "~2.7.10",
+    "vite-plugin-compression": "~0.4.0",
     "vite-plugin-env-compatible": "~1.1.1",
     "vite-plugin-eslint": "~1.3.0",
     "vite-plugin-mkcert": "~1.5.2",
-    "vite-plugin-pages": "~0.19.7",
+    "vite-plugin-pages": "~0.19.8",
     "vite-plugin-stylelint": "~1.1.0",
     "vite-plugin-vue-layouts": "~0.5.0",
     "vite-plugin-vue2": "~1.9.0",
