--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,10 +25,18 @@
   },
   "include": [
     "./**/.*.js",
+    "./**/.*.cjs",
+    "./**/.*.mjs",
     "./**/*.js",
+    "./**/*.cjs",
+    "./**/*.mjs",
     "./**/*.jsx",
     "./**/.*.ts",
+    "./**/.*.cts",
+    "./**/.*.mts",
     "./**/*.ts",
+    "./**/*.cts",
+    "./**/*.mts",
     "./**/*.tsx",
     "./**/*.vue",
     "./**/*.svelte"
