--- a/package.json
+++ b/package.json
@@ -50,25 +50,26 @@
     "@babel/core": "~7.16.7",
     "@babel/eslint-parser": "~7.16.5",
     "@commitlint/cli": "~16.0.1",
-    "@iconify/json": "~1.1.449",
+    "@iconify/json": "~1.1.451",
     "@modyqyw/fabric": "~4.7.1",
     "@types/browser-update": "~3.3.0",
     "@types/nprogress": "~0.2.0",
     "@types/statuses": "~2.0.0",
-    "@typescript-eslint/eslint-plugin": "~5.8.1",
-    "@typescript-eslint/parser": "~5.8.1",
+    "@typescript-eslint/eslint-plugin": "~5.9.0",
+    "@typescript-eslint/parser": "~5.9.0",
     "@vitejs/plugin-legacy": "~1.6.4",
     "@vue/runtime-dom": "~3.2.26",
     "commitizen": "~4.2.4",
     "cross-env": "~7.0.3",
-    "eslint": "~8.5.0",
+    "eslint": "~8.6.0",
     "husky": "~7.0.4",
     "is-ci": "~3.0.1",
-    "lint-staged": "~12.1.4",
+    "lint-staged": "~12.1.5",
     "markdownlint-cli": "~0.30.0",
-    "npm-check-updates": "~12.0.5",
+    "npm-check-updates": "~12.1.0",
     "picocolors": "~1.0.0",
-    "postcss-preset-env": "~7.1.0",
+    "postcss-flexbugs-fixes": "~5.0.2",
+    "postcss-preset-env": "~7.2.0",
     "prettier": "~2.5.1",
     "release-it": "~14.11.8",
     "rimraf": "~3.0.2",
@@ -85,10 +86,10 @@
     "vite-plugin-env-compatible": "~1.1.1",
     "vite-plugin-eslint": "~1.3.0",
     "vite-plugin-mkcert": "~1.5.2",
-    "vite-plugin-pages": "~0.19.8",
+    "vite-plugin-pages": "~0.19.9",
     "vite-plugin-stylelint": "~1.1.0",
     "vite-plugin-vue-layouts": "~0.5.0",
-    "vite-plugin-vue2": "~1.9.0",
+    "vite-plugin-vue2": "~1.9.2",
     "vue-template-compiler": "~2.6.14",
     "vue-tsc": "~0.30.1"
   }
