--- a/.gitignore
+++ b/.gitignore
@@ -118,14 +118,14 @@ dist
 # Rax.js build
 .rax
 
-# vuepress build output
+# Vuepress build output
 .vuepress/dist
 
-# ssr
+# SSR
 dist-ssr
 dist_ssr
 
-# ssg
+# SSG
 dist-ssg
 dist_ssg
 
@@ -141,6 +141,10 @@ dist_ssg
 
 # TernJS port file
 .tern-port
+
+# Cypress
+/cypress/videos/
+/cypress/screenshots/
 
 # Editor
 .vscode-test
