chore: update deps

--- a/package.json
+++ b/package.json
@@ -19,18 +19,18 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/@commitlint/cz-commitlint"
+      "path": "@commitlint/prompt"
     }
   },
   "dependencies": {
     "@iconify/vue2": "~1.1.3",
     "@modyqyw/utils": "~2.1.2",
     "@vue/composition-api": "~1.4.6",
-    "@vueuse/core": "~7.6.1",
-    "@vueuse/integrations": "~7.6.1",
+    "@vueuse/core": "~7.6.2",
+    "@vueuse/integrations": "~7.6.2",
     "axios": "~0.25.0",
-    "browser-update": "~3.3.37",
-    "color": "~4.2.0",
+    "browser-update": "~3.3.38",
+    "color": "~4.2.1",
     "dayjs": "~1.10.7",
     "element-ui": "~2.15.7",
     "modern-normalize": "~1.1.0",
@@ -47,8 +47,9 @@
   "devDependencies": {
     "@babel/core": "~7.17.2",
     "@babel/eslint-parser": "~7.17.0",
-    "@commitlint/cli": "~16.1.0",
-    "@iconify/json": "~2.0.35",
+    "@commitlint/cli": "~16.2.1",
+    "@commitlint/prompt": "~16.2.1",
+    "@iconify/json": "~2.0.36",
     "@modyqyw/fabric": "~4.12.0",
     "@types/browser-update": "~3.3.0",
     "@types/color": "~3.0.3",
@@ -56,11 +57,11 @@
     "@types/statuses": "~2.0.0",
     "@typescript-eslint/eslint-plugin": "~5.11.0",
     "@typescript-eslint/parser": "~5.11.0",
-    "@vitejs/plugin-legacy": "~1.7.0",
-    "@vue/runtime-dom": "~3.2.30",
+    "@vitejs/plugin-legacy": "~1.7.1",
+    "@vue/runtime-dom": "~3.2.31",
     "commitizen": "~4.2.4",
     "cross-env": "~7.0.3",
-    "eslint": "~8.8.0",
+    "eslint": "~8.9.0",
     "husky": "~7.0.4",
     "is-ci": "~3.0.1",
     "lint-staged": "~12.3.3",
@@ -68,29 +69,29 @@
     "npm-check-updates": "~12.3.0",
     "picocolors": "~1.0.0",
     "postcss-flexbugs-fixes": "~5.0.2",
-    "postcss-preset-env": "~7.3.1",
+    "postcss-preset-env": "~7.3.2",
     "prettier": "~2.5.1",
     "release-it": "~14.12.4",
     "rimraf": "~3.0.2",
     "sass": "~1.49.7",
     "shelljs": "~0.8.5",
-    "stylelint": "~14.4.0",
+    "stylelint": "~14.5.0",
     "tailwindcss": "~1.9.6",
     "type-fest": "~2.11.2",
     "typescript": "~4.5.5",
     "unplugin-icons": "~0.13.1",
     "unplugin-vue-components": "~0.17.18",
-    "unplugin-vue2-script-setup": "~0.9.2",
-    "vite": "~2.8.0",
+    "unplugin-vue2-script-setup": "~0.9.3",
+    "vite": "~2.8.1",
     "vite-plugin-compression": "~0.5.1",
     "vite-plugin-env-compatible": "~1.1.1",
     "vite-plugin-eslint": "~1.3.0",
     "vite-plugin-mkcert": "~1.5.2",
     "vite-plugin-pages": "~0.20.2",
-    "vite-plugin-stylelint": "~1.1.0",
+    "vite-plugin-stylelint": "~1.1.3",
     "vite-plugin-vue-layouts": "~0.6.0",
     "vite-plugin-vue2": "~1.9.3",
     "vue-template-compiler": "~2.6.14",
-    "vue-tsc": "~0.31.2"
+    "vue-tsc": "~0.31.3"
   }
 }
